# Photo_Identify

./: .gitignore  README.md  backup.bat  install.bat  photo_identify_iPhone.db-shm  photo_identify_iPhone.db-wal  photo_identify_iPhone.log.1  pyproject.toml  start_gui.bat  test_redirect.py  test_tqdm.py  test_tqdm2.py  test_tqdm3.py  walkthrough.md  打包说明.md  用户需求.txt  算法优化方案.md  计划_人脸识别功能.md
scripts/: build_portable.py
scripts/pyinstaller/: build_exe.py  lvip_decompression.spec  photo_identify.spec  video_compression.spec  打包exe说明.md
src/data_migration/: __init__.py  backfill_text_embeddings.py  clean_orphaned_foreign_key_records.py  lvip_decompression.py
src/photo_identify/: __init__.py  __main__.py  cache_manager.py  cli.py  config.py  embedding_runtime.py  face_manager.py  gui.py  image_utils.py  llm.py  model_manager.py  person_merge.py  runtime_compat.py  scanner.py  search.py  storage.py  test_ollama.py  test_vLLM.py
src/video_edit/: video_compression.py  video_reading.py
test/: debug_video.py  test_ollama.py  test_vLLM.py  test_vLLM_result.py  test_vLLM_video.py
