[project]
name = "photo-identify"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.45.0",
    "pillow>=11.1.0",
    "jieba>=0.42.1",
    "opencv-python-headless>=4.0.0",
    "pillow-heif>=0.21.0",
    "insightface>=0.7.3",
    "onnxruntime-gpu>=1.24.2",
    "scikit-learn>=1.8.0",
    "opencv-python>=4.13.0.92",
    "numpy>=2.4.2",
    "tqdm>=4.66.0",
    "aiohttp>=3.13.3",
    "av>=16.1.0",
]

[project.scripts]
photo-identify = "photo_identify.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
