[project]
name = "photo-identify"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "pillow>=11.1.0",
    "jieba>=0.42.1",
    "opencv-python-headless>=4.0.0",
    "pillow-heif>=0.21.0",
    "insightface>=0.7.3",
    "onnxruntime-gpu>=1.24.2",
    "scikit-learn>=1.8.0",
    "numpy>=2.4.2",
    "tqdm>=4.66.0",
    "aiohttp>=3.13.3",
    "sentence-transformers>=5.2.0",
    "torch>=2.10.0",
]

[project.scripts]
photo-identify = "photo_identify.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
# PyTorch CUDA 12.8 版本需要从官方索引安装（PyPI 上仅有 CPU 版）
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
